crates/sutura-app/tests/snapshots/recurring-revenue-annual-in-north__params@bigquery.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.params()
---
- Date: 2026-06-01
- Date: 2026-07-01
- Text: active
- Text: annual
- Text: north
