crates/sutura-app/tests/snapshots/recurring-revenue-annual-in-north__rows@cube.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
contract_term	period	recurring_revenue
Text(annual)	Text(2026-06-01)	Integer(14914)
