crates/sutura-app/tests/snapshots/recurring-revenue-annual-in-north__sql@clickhouse.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT "fct_subscription_monthly"."contract_term" AS "contract_term", CAST(dateTrunc('month', "fct_subscription_monthly"."month") AS DATE) AS "period", if(toTypeName(sum("fct_subscription_monthly"."mrr_cents")) IN ('Int64', 'UInt64', 'Nullable(Int64)', 'Nullable(UInt64)'), toDecimal128(sum(accurateCastOrNull("fct_subscription_monthly"."mrr_cents", 'Int128')), 0), toDecimal128(sum("fct_subscription_monthly"."mrr_cents"), 0)) AS "recurring_revenue" FROM "fct_subscription_monthly" LEFT JOIN "dim_customer" ON "fct_subscription_monthly"."customer_key" = "dim_customer"."customer_key" WHERE "fct_subscription_monthly"."month" >= ? AND "fct_subscription_monthly"."month" < ? AND "fct_subscription_monthly"."status" = ? AND "fct_subscription_monthly"."contract_term" = ? AND "dim_customer"."region" = ? GROUP BY "fct_subscription_monthly"."contract_term", CAST(dateTrunc('month', "fct_subscription_monthly"."month") AS DATE) ORDER BY "fct_subscription_monthly"."contract_term", CAST(dateTrunc('month', "fct_subscription_monthly"."month") AS DATE) LIMIT 10001
