crates/sutura-app/tests/snapshots/recurring-revenue-annual-in-north__sql@duckdb.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT "fct_subscription_monthly"."contract_term" AS "contract_term", CAST(DATE_TRUNC('month', "fct_subscription_monthly"."month") AS DATE) AS "period", SUM("fct_subscription_monthly"."mrr_cents") AS "recurring_revenue" FROM "fct_subscription_monthly" LEFT JOIN "dim_customer" ON "fct_subscription_monthly"."customer_key" = "dim_customer"."customer_key" WHERE "fct_subscription_monthly"."month" >= ? AND "fct_subscription_monthly"."month" < ? AND "fct_subscription_monthly"."status" = ? AND "fct_subscription_monthly"."contract_term" = ? AND "dim_customer"."region" = ? GROUP BY "fct_subscription_monthly"."contract_term", CAST(DATE_TRUNC('month', "fct_subscription_monthly"."month") AS DATE) ORDER BY "fct_subscription_monthly"."contract_term" NULLS LAST, CAST(DATE_TRUNC('month', "fct_subscription_monthly"."month") AS DATE) NULLS LAST LIMIT 10001
